--- a/.paths.yml
+++ b/.paths.yml
@@ -30,14 +30,24 @@
     - We had a misunderstanding about compensation practices for internships.
     - I don't really know much else about them, but you'll probably figure it out someday.
   4:
-    - Anyways, that should about wrap things up here. I've gotta run.
-    - The pursuit for free labor never ends for an enterprising businessman such as myself.
+    - Anyways, just get that lease printed out and signed.
+    - I'll come by at some point to pick it up.
+    - That should about wrap things up here. I've gotta run.
+    - The pursuit for skilled free labor never ends for an enterprising businessman such as myself.
     - Good luck with the unpacking, and get me that lease ASAP.
     -
     - Signed,
     -     The Landlord
   5:
     - You put the note back down.
+  6:
+    - You've already unpacked and taken care of the lease situation.
+    - You're pretty sure you don't need this note anymore.
+  7:
+    - You decide to keep the note for now.
+    - Why? You appreciate a little clutter, it seems.
+  8:
+    - You toss the note.
 
 # fragile-moving-box (printer, box in dining-room)
 1:
@@ -101,13 +111,193 @@
     - It doesn't sound like loose change. Might be worth checking out later.
     - You then return to the kitchen and spend a moment appreciating the sink. It has *two* basins.
 
-# petite-moving-box (box in bedroom)
+# tube-shaped-moving-box (gamecylinder, box in bedroom)
 3:
   0:
-    - A curiously small cardboard box.
+    - A curiously tube-shaped cardboard box.
   1:
+    - Inside is your `gamecylinder.py`! The cylinder-shaped gaming console from yesteryear!
+    - It's cylindrical shape allows it to hold a multitude of game disks at once! Handy!
+    - ...It's a little dusty. You honestly forgot you had this.
+  2:
+    - You drop off the `gamecylinder.py` in the living-room.
+    - You then return to the bedroom to inspect the baseboards. They're sufficiently baseboard-y.
+  3:
+    - You drop off the `gamecylinder.py` in the dining-room.
+    - You then return to the bedroom to inspect the baseboards. They're sufficiently baseboard-y.
+  4:
+    - You drop off the `gamecylinder.py` in the kitchen.
+    - You then return to the bedroom to inspect the baseboards. They're sufficiently baseboard-y.
+  5:
+    - You drop off the `gamecylinder.py` in the hallway.
+    - You then return to the bedroom to inspect the baseboards. They're sufficiently baseboard-y.
+  6:
+    - You keep the `gamecylinder.py` right here in the bedroom. Unpacking is so *simple*!
+  7:
+    - You drop off the `gamecylinder.py` in the office.
+    - You then return to the bedroom to inspect the baseboards. They're sufficiently baseboard-y.
+
+# sinister-looking-moving-box (toaster, box in bedroom)
+4:
+  0:
+    - You don't know what it is, but there's *something* about this box that gives you the chills.
+  1:
+    - Huh. It's just a `toaster.py`.
+    - Weird thing is, you don't remember owning a toaster...
+    - ...*shudder*.
+  2:
+    - You pick up the `toaster.py` and you feel the hairs on your neck stand straight up. Spooky.
+    - You quickly move the `toaster.py` into the living-room before retreating back to the bedroom.
+  3:
+    - You pick up the `toaster.py` and you feel the hairs on your neck stand straight up. Spooky.
+    - You quickly move the `toaster.py` into the dining-room before retreating back to the bedroom.
+  4:
+    - You pick up the `toaster.py` and you feel the hairs on your neck stand straight up. Spooky.
+    - You quickly move the `toaster.py` into the kitchen before retreating back to the bedroom.
+  5:
+    - You pick up the `toaster.py` and you feel the hairs on your neck stand straight up. Spooky.
+    - You quickly move the `toaster.py` into the hallway before retreating back to the bedroom.
+  6:
+    - You hate the idea of touching this spooky `toaster.py` at all and just leave it there.
+    - Yep, sitting on your bedroom floor. Where toasters belong. Obviously.
+  7:
+    - You pick up the `toaster.py` and you feel the hairs on your neck stand straight up. Spooky.
+    - You quickly move the `toaster.py` into the hallway before retreating back to the bedroom.
+
+# beat-up-moving-box (busted-television, box in office)
+5:
+  0:
+    - This moving box has taken in a few hits over the course of the move.
+    - You hope whatever's inside is still okay...
+  1:
+    - Oh, dear. It's your TV.
+    - It's uh, taken a bit of a beating.
+    - The screen is shattered to the point that you wouldn't be able to see anything on it.
+    - Bummer.
+    - Still, you can't just *throw away* your `busted-television.py`. That wouldn't be very green of you.
+    - You'll have to keep it *somewhere* in your house for now, until you can figure out what to do with it.
+  2:
+    - You morosely lug the `busted-television.py` into the living-room.
+    - It may be an eyesore, but it's *your* eyesore.
+    - You then saunter back to the office, wondering what it is that makes an office an office.
+  3:
+    - You morosely lug the `busted-television.py` into the dining-room.
+    - It may be an eyesore, but it's *your* eyesore.
+    - You then saunter back to the office, wondering what it is that makes an office an office.
+  4:
+    - You morosely lug the `busted-television.py` into the kitchen.
+    - It may be an eyesore, but it's *your* eyesore.
+    - You then saunter back to the office, wondering what it is that makes an office an office.
+  5:
+    - You morosely lug the `busted-television.py` into the hallway.
+    - It may be an eyesore, but it's *your* eyesore.
+    - You then saunter back to the office, wondering what it is that makes an office an office.
+  6:
+    - You morosely lug the `busted-television.py` into the bedroom.
+    - It may be an eyesore, but it's *your* eyesore.
+    - You then saunter back to the office, wondering what it is that makes an office an office.
+  7:
+    - You opt to keep the `busted-television.py` right where it is, in the office.
+    - It may be an eyesore, but it's *your* eyesore.
+
+# printer
+6:
+  0:
+    - You start up the printer, but all you get for your trouble is a warning message:
+    -
+    - LOW ON CYAN INK. REPLACE CYAN INK.
+    -
+    - Guess you've got some ink to track down.
+
+  1:
+    - You start up the printer...but you realize you haven't queued up any print jobs.
+    - You'll need to download a file to print first, somehow...
+  2:
+    - You start up the printer, and see the lease at the top of the print queue.
+    - Thanks, cliVe.
+    - No warnings about low ink, either. You're good to go!
+    - You hit the print button, and at first nothing seems to happen...
+    -
+    - ...then you hear a whirring sound starting up...
     - 
+    - ...and slowly, a piece of paper starts peeking out of the printer's print tray...
+    -
+    - ...*very* slowly, that is...
+    -
+    - ...you feel like you might be here a moment...
+    -
+    - ...you forgot how old your printer was...
+    -
+    - ...if you had a dime to your name...
+    -
+    - ...you'd consider replacing it...
+    -
+    - ...you see about half a sheet of paper sticking out of the printer now...
+    -
+    - ...still about half to go, though...
+    -
+    - ...you look around the room you're in...
+    -
+    - ...as good a place as any for a printer, you guess...
+    -
+    - ...the feng shui feels a little off...
+    -
+    - ...but you'll live...
+    -
+    - ...almost there...
+    -
+    - ...so very close...
+    -
+    - ...aaaaaand...
+    -
+    - DONE!
+    - You grab the lease and sign it.
+    - You don't know exactly *when* the landlord's going to come for it.
+    - So for now, you fold it up and stick it in your pocket.
+    - Mission accomplished.
 
-# perfectly-square-moving-box (box in bedroom)
-
-# irregular-moving-box (box in office)
+# couch
+7:
+  0:
+    - There was something rattling around underneath the cushions when you were moving the couch earlier.
+    - You boldly plunge your arm into the space between the cushions and fish around a bit...
+    - ...before closing your fingers around what is unmistakably an `ink-cartridge`.
+    - You pull it out. Cyan ink. Nice.
+  1:
+    - You plop onto the couch for a moment.
+    - 
+    -
+    -
+    - "That was nice," you think to yourself as you get up to your feet.
+# gamecylinder
+8:
+  0:
+    - If you don't have a *functional* TV in the vicinity of the `gamecylinder.py`, there's not much to see here.
+    - Bummer.
+# busted-television
+9:
+  0:
+    - This TV is hopelessly busted, and staring at it any longer would only make you sad.
+    - Maybe someday you'll find a screen repair kit. That'd be convenient.
+# toaster
+10:
+  0:
+    - Yep, this toaster is definitely haunted.
+    - You can just *feel* this ominous energy coming from it.
+  1:
+    - You don't even have any bread, but still you press down on the toaster lever.
+    - A horrible, *horrible* noise emits from the toaster.
+    - You'd describe it as a metallic screeching combined with a sort of wet pulsing.
+    - It's hard to describe, really.
+    - But as suddenly as the sound fills the room, it stops.
+    - The toaster dings, and sure enough, two slices of perfectly toasted bread are in the toaster's slots.
+    - No way are you eating haunted toast though.
+    - You grab the toast, and for a second you feel...unwell.
+    - You promptly chuck the toast out the window and feel at ease again.
+    - Spooky.
+  2:
+    - You walk away from the undeniably haunted toaster.
+    - A wise decision, you feel.
+  3:
+    - The toaster is no longer haunted.
+    - But there's not a whole lot it can do without bread, unfortunately.
