Fully functioning landlord-note!

--- a/.paths.yml
+++ b/.paths.yml
@@ -77,6 +77,10 @@
     - Who knows.
   8:
     - You toss the note.
+  9:
+    - You're not sure you really
+    - need to read that whole note again.
+    - Your landlord had a *lot* to say, after all.
 
 # fragile-moving-box (printer, box in dining-room)
 1:
